--- a/styles.scss
+++ b/styles.scss
@@ -173,8 +173,8 @@ body {
 		align-items: center;
 		backdrop-filter: blur(5px);
 		transition: opacity 1000ms;
-		opacity: 0;
-		pointer-events: none;
+		//opacity: 0;
+		//pointer-events: none;
 
 		p {
 			font-size: 50px;
@@ -194,6 +194,12 @@ body {
 			text-align: center;
 			margin-top: 50px;
 			margin-bottom: 50px;
+			white-space: nowrap;
+
+			@media screen and (max-width: 425px) {
+				font-size: 15vw;
+				padding: 0px 24px 0px 24px;
+			}
 		}
 
 		button {
