Forget to change back styles

--- a/styles.scss
+++ b/styles.scss
@@ -173,8 +173,8 @@ body {
 		align-items: center;
 		backdrop-filter: blur(5px);
 		transition: opacity 1000ms;
-		//opacity: 0;
-		//pointer-events: none;
+		opacity: 0;
+		pointer-events: none;
 
 		p {
 			font-size: 50px;
