--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,8 @@ body #game-over {
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   transition: opacity 1000ms;
+  opacity: 0;
+  pointer-events: none;
 }
 body #game-over p {
   font-size: 50px;
