--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,50 @@ body #header {
   display: flex;
   justify-content: center;
 }
-body #header h1 {
+body #header #wrapper {
+  width: auto;
+  height: auto;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body #header #wrapper h1 {
   font-weight: 500;
   font-size: 50px;
+}
+body #header #wrapper h2 {
+  margin-top: -12px;
+  font-weight: 400;
+  font-size: 20px;
+}
+body #header #buttons {
+  width: auto;
+  height: 100%;
+  background-color: transparent;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body #header #buttons .button {
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+body #header #buttons .button:hover i {
+  color: white;
+}
+body #header #buttons .button i {
+  font-size: 36px;
+  transition: color 250ms;
 }
 body #header p {
   position: absolute;
@@ -112,7 +153,7 @@ body #board .cell .inside-cell {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: min(7vw, 50px);
+  font-size: min(7vw, 60px);
   transition: background-color 0ms, transform 250ms, opacity 125ms;
   z-index: 1000000;
 }
