--- a/styles.scss
+++ b/styles.scss
@@ -24,9 +24,54 @@ body {
 		display: flex;
 		justify-content: center;
 
-		h1 {
-			font-weight: 500;
-			font-size: 50px;
+		#wrapper {
+			width: auto;
+			height: auto;
+			background-color: transparent;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			h1 {
+				font-weight: 500;
+				font-size: 50px;
+			}
+			h2 {
+				margin-top: -12px;
+				font-weight: 400;
+				font-size: 20px;
+			}
+		}
+
+		#buttons {
+			width: auto;
+			height: 100%;
+			background-color: transparent;
+			position: absolute;
+			right: 0px;
+			top: 0px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			.button {
+				width: 50px;
+				height: 50px;
+				background-color: transparent;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				cursor: pointer;
+
+				&:hover i {
+					color: white;
+				}
+
+				i {
+					font-size: 36px;
+					transition: color 250ms;
+				}
+			}
 		}
 
 		p {
@@ -98,7 +143,7 @@ body {
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				font-size: min(7vw, 50px);
+				font-size: min(7vw, 60px);
 				transition: background-color 0ms, transform 250ms, opacity 125ms;
 				z-index: 1000000;
 			}
