--- a/styles.scss
+++ b/styles.scss
@@ -37,9 +37,13 @@ body {
 				font-size: 50px;
 			}
 			h2 {
-				margin-top: -12px;
+				margin-top: 0px;
 				font-weight: 400;
 				font-size: 20px;
+				background-color: #2c333a;
+				padding: 2px 24px 2px 24px;
+				border-radius: 400px;
+				border: solid 2px #21262c;
 			}
 		}
 
