--- a/styles.scss
+++ b/styles.scss
@@ -25,7 +25,7 @@ body {
 		justify-content: center;
 
 		#wrapper {
-			width: auto;
+			width: 100%;
 			height: auto;
 			background-color: transparent;
 			display: flex;
@@ -37,12 +37,13 @@ body {
 				font-size: 50px;
 			}
 			h2 {
+				width: 100%;
 				margin-top: 0px;
 				font-weight: 400;
 				font-size: 20px;
 				background-color: #2c333a;
 				padding: 2px 24px 2px 24px;
-				border-radius: 400px;
+				border-radius: 4px;
 				border: solid 2px #21262c;
 			}
 		}
