--- a/styles.scss
+++ b/styles.scss
@@ -252,29 +252,80 @@ body {
 			}
 		}
 
-		button {
+		#wrapper {
 			width: auto;
 			height: auto;
-			display: flex;
-			background-color: rgba(0, 0, 0, 0.5);
-			border: unset;
-			font-size: 32px;
-			padding: 5px 50px 5px 50px;
-			cursor: pointer;
-			margin-left: auto;
-			margin-right: auto;
+			background-color: transparent;
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			border-radius: 12px;
 			margin-top: 100px;
-			transition: all 250ms;
-			outline: unset;
 
-			&:hover {
-				transform: translateY(-6px);
-				color: white;
+			@media screen and (max-width: 768px) {
+				flex-direction: column;
 			}
+
+			button {
+				width: auto;
+				height: auto;
+				display: flex;
+				background-color: rgba(0, 0, 0, 0.5);
+				border: unset;
+				font-size: 32px;
+				padding: 5px 50px 5px 50px;
+				cursor: pointer;
+				margin-left: auto;
+				margin-right: auto;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				border-radius: 12px;
+				transition: all 250ms;
+				outline: unset;
+				margin: 0px 10px 0px 10px;
+
+				&:hover {
+					transform: translateY(-6px);
+					color: white;
+				}
+
+				@media screen and (max-width: 768px) {
+					width: 100%;
+					margin: 10px;
+				}
+			}
+		}
+	}
+
+	#hidden-play-again-button {
+		width: auto;
+		height: auto;
+		display: flex;
+		background-color: rgba(0, 0, 0, 0.5);
+		border: unset;
+		font-size: 24px;
+		padding: 5px 36px 5px 36px;
+		cursor: pointer;
+		margin-left: auto;
+		margin-right: auto;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 12px;
+		transition: all 250ms;
+		outline: unset;
+		margin: 0px 10px 0px 10px;
+		position: fixed;
+		bottom: 125px;
+		left: 50%;
+		transform: translateX(-50%);
+		white-space: nowrap;
+		opacity: 0;
+		pointer-events: none;
+
+		&:hover {
+			transform: translate(-50%, -6px);
+			color: white;
 		}
 	}
 }
